2015-12-04 Massimo Manghi <mxmanghi@apache.org>
    * 2.2: releasing current version as 2.2.4

2015-11-27 Massimo Manghi <mxmanghi@apache.org>
    * 2.2: bringing this brack back to r1702115. Changes done after Sept 9 2015
    are now in branches/2.3

2015-09-09 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: We don't delete the Tcl interpreter anymore,
    we just let the process exit do the cleanup.

2015-07-29 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: someone noticed the handler was registered
    as APR_HOOK_LAST instead APR_HOOK_MIDDLE as recommended by the 
    specifications

2015-07-27 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: add more comments, improved code 
    readability in Rivet_CreateTclInterp

2015-06-21 Massimo Manghi <mxmanghi@apache.org>
    * VERSION: new version 2.2.4
    * configure.ac: changing version to 2.2.4, definition of config.h
    variable RIVET_CONFIGURE_CMD carring the configure full command that
    prepared the build of the module
    * src/apache-2/mod_rivet.c: Improved readability of code in 
    Rivet_ChildHandlers. Add RIVET_CONFIGURE_CMD to 'server' array

2015-06-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.css: changing selector for namespace table as DocBook
    seems not to honor the id attribute anymore
    * doc/xml/request.css: changing the id "namespaces" as class

2015-05-21 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/installation.html: wrong links fixed

2015-05-05 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: New procedures Rivet_PrintErrorMessage and
    Rivet_ExecuteErrorHandler. Error handling generalized and Tcl
    status returned by Tcl_EvalObjEx is propagated by Rivet_ExecuteAndCheck
    to interrupt execution even when an error occurs or abort_page is
    called from a nested template. Flag globals->page_aborting is
    used to prevent error loggin because ::rivet::abort_page is called.