@@ -1,1 +1,1 @@
-2.2.4
+2.2.5
